# vk_teams_async_bot

./: .env.example  .env.test.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  context7.json  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  live-smoke.yml  tests.yml
docs/: endpoint_matrix.md
examples/: callback_keyboard_bot.py  depends.py  echo_bot.py  format_bot.py  middleware_bot.py  send_audio.py  start_bot.py
examples/showcase_bot/: README.md  keyboards.py  keyboards_extra.py  main.py  states.py
examples/showcase_bot/handlers/: __init__.py  buttons.py  categories.py  chat_admin.py  chat_ops.py  di_demo.py  error_demo.py  events.py  files.py  filters_demo.py  filters_new.py  formatting.py  framework_demo.py  messages.py  multiselect.py  navigation.py  toggles.py  utils.py  wizard_buttons.py  wizard_mixed.py  wizard_text.py
tests/: test_sending.py
tests/fixtures/: test.csv  test.txt  test.xlsx
tests/integration/: test_bot_polling.py  test_dispatch_flow.py  test_long_poll.py  test_multipart_upload.py  test_retry_and_errors.py  test_session_lifecycle.py
tests/live/: conftest.py  test_live_chats.py  test_live_events.py  test_live_files.py  test_live_messages.py  test_live_self.py
tests/unit/: test_bot_init.py  test_client_retry.py  test_client_session.py  test_dispatcher_locks.py  test_errors.py  test_filters.py  test_fsm_context.py  test_fsm_dispatch_integration.py  test_fsm_edge_cases.py  test_fsm_state.py  test_fsm_storage.py  test_handlers.py  test_log_filter.py  test_methods.py  test_middleware_manager.py  test_middleware_session_timeout.py  test_redis_storage.py  test_types_base.py  test_types_chat.py  test_types_enums.py  test_types_event.py  test_types_file.py  test_types_format.py  test_types_keyboard.py  test_types_message.py  test_types_response.py  test_types_user.py  test_utils.py
vk_teams_async_bot/: __init__.py  bot.py  client_session.py  constants.py  dispatcher.py  errors.py  events.py  filter.py  handler.py  helpers.py  middleware.py  schemas.py  state.py  timer.py  utils.py
vk_teams_async_bot/client/: __init__.py  log_filter.py  retry.py  session.py
vk_teams_async_bot/filters/: __init__.py  base.py  callback.py  chat.py  composite.py  message.py  parts.py  state.py  user.py
vk_teams_async_bot/fsm/: __init__.py  context.py  state.py
vk_teams_async_bot/fsm/storage/: __init__.py  base.py  memory.py  redis.py
vk_teams_async_bot/handlers/: __init__.py  base.py  callback_query.py  chat_member.py  command.py  deleted_message.py  edited_message.py  message.py  pinned_message.py
vk_teams_async_bot/methods/: __init__.py  _helpers.py  base.py  chats.py  events.py  files.py  messages.py  self_.py
vk_teams_async_bot/middleware/: __init__.py  base.py  manager.py  session_timeout.py
vk_teams_async_bot/types/: __init__.py  base.py  chat.py  enums.py  event.py  event_chat.py  file.py  format_.py  keyboard.py  message.py  response.py  user.py
