[tool.poetry]
name = "vk-teams-async-bot"
version = "0.1.2"
description = ""
authors = ["Александр Смирнов <alexsmi4444@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_teams_async_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.1"
pyright = "^1.1.340"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = false
ensure_newline_before_comments = true
line_length = 88

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
