[tool.poetry]
name = "vk-teams-async-bot"
version = "1.0.0"
description = "Async Python library for building VK Teams bots via VK Teams Bot API"
authors = ["Александр Смирнов <alexsmi4444@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_teams_async_bot"}]
license = "MIT"
repository = "https://github.com/Quakeer444/vk_teams_async_bot"
homepage = "https://github.com/Quakeer444/vk_teams_async_bot"
keywords = ["vk-teams", "bot", "async", "aiohttp", "messenger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.1"
pyright = "^1.1.340"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
aioresponses = "^0.7.8"
python-dotenv = "^1.2.2"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = false
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
include = ["vk_teams_async_bot"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "tests"
]
# Pydantic discriminated unions narrow `type` via Literal -- this is idiomatic
reportIncompatibleVariableOverride = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
